compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__called_case.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x, y) {\n  case x {\n    0 -> y\n    _ -> y\n  }()\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  case x {
    0 -> y
    _ -> y
  }()
}


----- COMPILED JAVASCRIPT
function go(x, y) {
  return (() => {
    if (x === 0n) {
      return y;
    } else {
      return y;
    }
  })()();
}
