compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__following_todo.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x) {\n  case x {\n    True -> todo\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

fn go(x) {
  case x {
    True -> todo
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function go(x) {
  if (x) {
    throw makeError(
      "todo",
      "my/mod",
      4,
      "go",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  } else {
    return 1n;
  }
}
