compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__multi_subject_or.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x, y) {\n  case x, y {\n    True, _ | _, True -> 1\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  case x, y {
    True, _ | _, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
function go(x, y) {
  if (x) {
    return 1n;
  } else if (y) {
    return 1n;
  } else {
    return 0n;
  }
}
