compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__multi_subject_subject_assignments.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go() {\n  case True, False {\n    True, True -> 1\n    _, _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

fn go() {
  case True, False {
    True, True -> 1
    _, _ -> 0
  }
}


----- COMPILED JAVASCRIPT
function go() {
  let $ = true;
  let $1 = false;
  if ($ && $1) {
    return 1n;
  } else {
    return 0n;
  }
}
