compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__nested_string_prefix_match.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn main() {\n  case Ok([\"a\", \"b c\", \"d\"]) {\n    Ok([\"a\", \"b \" <> _, \"d\"]) -> 1\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

fn main() {
  case Ok(["a", "b c", "d"]) {
    Ok(["a", "b " <> _, "d"]) -> 1
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Ok, toList } from "../gleam.mjs";

function main() {
  let $ = new Ok(toList(["a", "b c", "d"]));
  if ($.isOk() &&
  $[0].hasLength(3) &&
  $[0].head === "a" &&
  $[0].tail.head.startsWith("b ") &&
  $[0].tail.tail.head === "d") {
    return 1n;
  } else {
    return 1n;
  }
}
