compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__nested_string_prefix_match_that_would_crash_on_js.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn main() {\n  case Ok([\"b c\", \"d\"]) {\n    Ok([\"b \" <> _, \"d\"]) -> 1\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

fn main() {
  case Ok(["b c", "d"]) {
    Ok(["b " <> _, "d"]) -> 1
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Ok, toList } from "../gleam.mjs";

function main() {
  let $ = new Ok(toList(["b c", "d"]));
  if ($.isOk() &&
  $[0].hasLength(2) &&
  $[0].head.startsWith("b ") &&
  $[0].tail.head === "d") {
    return 1n;
  } else {
    return 1n;
  }
}
