compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__pipe.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nfn go(x, f) {\n  case x |> f {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
---
----- SOURCE CODE

fn go(x, f) {
  case x |> f {
    0 -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
function go(x, f) {
  let $ = (() => {
    let _pipe = x;
    return f(_pipe);
  })();
  if ($ === 0n) {
    return 1n;
  } else {
    return 2n;
  }
}
